<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activity.CadastroPedidoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedido"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Produto"
        android:layout_marginTop="10dp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/spProduto"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantidade_do_produto"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/edQtdProduto"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cliente"
        android:layout_marginTop="10dp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/spCliente"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_produto_precisa_ser_selecionado"
        android:textColor="@android:color/holo_red_dark"
        android:layout_gravity="right"
        android:id="@+id/tvErroProduto"
        android:visibility="gone"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_cliente_precisa_ser_selecionado"
        android:textColor="@android:color/holo_red_dark"
        android:layout_gravity="right"
        android:id="@+id/tvErroCliente"
        android:visibility="gone"
        tools:ignore="RtlHardcoded" />

    <RadioGroup
        android:id="@+id/rgPaymentType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vista"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rbInstallment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_prazo" />

    </RadioGroup>

    <EditText
        android:id="@+id/edInstallmentCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantidade_de_parcelas"
        android:inputType="number"
        android:visibility="gone"
        android:autofillHints="" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btCadastrar"
        android:layout_margin="10dp"
        android:text="@string/cadastrar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:id="@+id/tvListaProdutos"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:id="@+id/tvListaClientes"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:id="@+id/tvPedidoCadastrado"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>